[package]
name = "mordomo-audio-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-nats = "0.38"
cpal = "0.15"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
tokio-stream = "0.1"
